@@ -21,6 +21,10 @@ Version 0.11
 - Support roman/sans/mono style defs and use them in the LaTeX
   formatter.
 
+- the raw token formatter is no longer registered to ``*.raw``
+  and it's documented that tokenization with this lexer may
+  raise exceptions.
+
 
 Version 0.10
 ------------
